--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,3 +17,11 @@ jobs:
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - run: pwd
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ltyiz07
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - run: docker build --tag ltyiz07/fast_test:latest .
+      - run: docker push ltyiz07/fast_test:latest
